fix: reset initial spacing and rows & columns size

--- a/01-foundation/apna-college/css/Assignment (CSS)/CSS - Part 6/Q2.css
+++ b/01-foundation/apna-college/css/Assignment (CSS)/CSS - Part 6/Q2.css
@@ -1,74 +1,77 @@
-.container{
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.container {
     height: 600px;
+
     display: grid;
     grid-template-rows: repeat(12, 1fr);
     grid-template-columns: repeat(12, 1fr);
-    grid-gap: 10px;
+    grid-gap: 0.5em;
 }
 
-.container div{
+.container div {
     background-color: pink;
-    font-size: 1.5em;
+    font-size: 1.2em;
 }
 
-.header{
+.header {
     grid-column: 1 / span 12;
 }
 
-.sidebar{
+.navigation {
+    grid-column: 3 / span 7;
+}
+
+.sidebar {
+    grid-column: 1 / span 2;
     grid-row: 2 / span 10;
-    grid-column: 1 / span 3;
 }
 
-.navigation{
-    grid-column: 4 / span 6;
+.main {
+    grid-row: 3 / span 9;
+    grid-column: 3 / span 7;
 }
 
-.ads{
+.ads {
     grid-row: 2 / span 10;
     grid-column: 10 / span 3;
 }
 
-.main{
-    grid-row: 3 / span 9;
-    grid-column: 4 / span 6;
-}
-
-.footer{
+.footer {
     grid-column: 1 / span 12;
+    grid-row: 12 / span 1;
 }
 
-.content{
-    display: flex;
-    justify-content: space-evenly;
-}
-
-@media (max-width: 720px){
-    .header{
+@media (max-width: 720px) {
+    .header {
         grid-column: 1 / span 12;
     }
 
-    .navigation{
+    .navigation {
         grid-row: 2;
         grid-column: 1 / span 12;
     }
 
-    .sidebar{
+    .sidebar {
         grid-row: 3 / span 9;
         grid-column: 1 / span 3;
     }
 
-    .main{
+    .main {
         grid-row: 3 / span 9;
         grid-column: 4 / span 9;
     }
 
-    .ads{
+    .ads {
         grid-row: 12;
         grid-column: 1 / span 3;
     }
 
-    .footer{
+    .footer {
         grid-row: 12;
         grid-column: 4 / span 9;
     }
